# punta-iq

./: .env  .env.local  .gitignore  .replit  DATA_SYSTEM_README.md  SCHEDULER_SETUP.md  ai_service_log.txt  basketball_cache_log.txt  cache_basketball_data.py  cache_football_data.py  cache_odds_data.py  cache_update_log.txt  cache_updater.py  cookies.txt  daily_cache_updater.py  dataset_exporter.py  easy-access.html  export_training_data.py  firebase-service-account.json  firebase_init.py  firebase_rules.json  football_cache_log.txt  index.html  launch-standalone.js  login.html  navigation.html  package-lock.json  package.json  public-test.html  pyproject.toml  replit-proxy.js  replit_scheduler.py  scheduler.py  scheduler_log.txt  serve-test-page.js  simple-access.html  simple_daily_cache.py  standalone-server.js  start-all.sh  start-app.js  (+14 more)
ai_service/: .env  .env.example  README.md  api.py  api_service.py  cloud_function.py  config.py  cron_jobs.py  data_fetcher.py  firebase_init.py  generate_training_data.py  install_dependencies.sh  main.py  minimal_api.py  minimal_flask.py  predictor.py  requirements.txt  serviceAccountKey.json.example  setup_and_run.sh  simple_api.py  simple_server.py  start_api.sh  start_api_service.py  storage.py  test_api_connections.py  test_prediction.py
attached_assets/: .env  Pasted--AI-Sports-Prediction-App-GitHub-README-for-MVP-Setup-Welcome-to-the-AI-Sports-Predictions--1745627472532.txt  Pasted--Smart-Prediction-Filters-User-Centric-Personalization-What-Let-users-choose-which-sports-leagu-1746546229842.txt  README.md  main.py  (+12 more)
(+318 files in other folders)
