[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=6.8.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
    "schedule>=1.2.2",
]
